Added unit test for VisitConfigurationRemmote.cls and IconPlanetVisitInfoEditRemote.cls

--- a/force-app/main/default/classes/CTPSelector.cls
+++ b/force-app/main/default/classes/CTPSelector.cls
@@ -2,7 +2,7 @@
  * Created by dmytro.fedchyshyn on 24.07.2019.
  */
 
-public with sharing class CTPSelector {
+public without sharing class CTPSelector {
     public List<Clinical_Trial_Profile__c> getCtpById(Id ctpId) {
         return [
                 SELECT Visit_Plan__c
@@ -20,6 +20,18 @@ public with sharing class CTPSelector {
                         ,icons__c
                 FROM Visit__c
                 WHERE Visit_Plan__c = :visitPlanId
+        ];
+    }
+
+    public List<Icon_Details__c> getIconDetailsByVisitPlanInCTP(Clinical_Trial_Profile__c ctp) {
+        return [
+                SELECT Id
+                        ,Name
+                        ,Label__c
+                        ,Description__c
+                        ,Custom_Icon__c
+                FROM Icon_Details__c
+                WHERE Visit_Plan__c = :ctp.Visit_Plan__c
         ];
     }
 
