Test Data update

--- a/force-app/main/default/classes/TestData.cls
+++ b/force-app/main/default/classes/TestData.cls
@@ -38,12 +38,14 @@ public class TestData {
             if(user.LastName == participant.Name) participantUser = user;
         }
         ctp = [
-                SELECT Id, Therapeutic_Area__c
+                SELECT Id, Therapeutic_Area__c,
+                        Terms_and_Conditions__c
                 FROM Clinical_Trial_Profile__c
                 WHERE NCT_Number__c = 'NCT00000001'
         ];
         ss = [
-                SELECT Id, Visit_Results_Sharing__c
+                SELECT Id, Visit_Results_Sharing__c,
+                        Principal_Investigator__c
                 FROM Study_Site__c
                 WHERE Clinical_Trial_Profile__c =: ctp.Id
         ];
