--- a/force-app/main/default/classes/CTPSelector.cls
+++ b/force-app/main/default/classes/CTPSelector.cls
@@ -16,6 +16,7 @@ public without sharing class CTPSelector {
         return [
                 SELECT Id,Name
                         ,Visit_Plan__c
+                        ,Patient_Portal_Name__c
                         ,Visit_Schedule__c
                         ,Visit_Number__c
                         ,icons__c
