fix Display PP Name on Visit Configuration page PEH-857

--- a/force-app/main/default/classes/CTPSelector.cls
+++ b/force-app/main/default/classes/CTPSelector.cls
@@ -15,6 +15,7 @@ public with sharing class CTPSelector {
         return [
                 SELECT Id,Name
                         ,Visit_Plan__c
+                        ,Patient_Portal_Name__c
                         ,Visit_Schedule__c
                         ,Visit_Number__c
                         ,icons__c
