--- a/force-app/main/default/classes/TaskEditRemote.cls
+++ b/force-app/main/default/classes/TaskEditRemote.cls
@@ -15,8 +15,8 @@ public without sharing class TaskEditRemote {
                 new LabelValueItem(Label.Disabled, 'Disabled')
         };
         @AuraEnabled public List<LabelValueItem> reminderFrequencyList = new List<LabelValueItem>{
-                new LabelValueItem(Label.One_day_before, 'Day_Before'),
-                new LabelValueItem(Label.Complete_By_Date, 'By_Date')
+                new LabelValueItem(Label.Complete_By_Date, 'By_Date'),
+                new LabelValueItem(Label.One_day_before, 'Day_Before')
         };
 
         @AuraEnabled public Task task;
