--- a/force-app/main/tests/classes/Test_VisitResultSharingService.cls
+++ b/force-app/main/tests/classes/Test_VisitResultSharingService.cls
@@ -97,7 +97,7 @@ private class Test_VisitResultSharingService {
             VisitResultSharingService.getCTP(testData.ctp.Id);
             VisitResultSharingService.disableShareback(testData.ctp);
             VisitResultSharingService.getTypeVRSharingMap(testData.ctp);
-            VisitResultSharingService.updateStudySitesSharing(testData.ctp.Id, new List<String>{
+            VisitResultSharingService.updateStudySitesSharing(testData.ctp.Id, new List<Id>{
                     testData.ss.Id
             }, true);
         }
