Fixed REF-407 and REF-411

--- a/force-app/main/default/classes/ParticipantEnrollmentService.cls
+++ b/force-app/main/default/classes/ParticipantEnrollmentService.cls
@@ -262,6 +262,7 @@ public without sharing class ParticipantEnrollmentService {
             'Participant__r.Last_Name__c',
             'Participant__r.Full_Name__c',
             'Participant__r.Date_of_Birth__c',
+            'Participant__r.Birth_Year__c',
             'Participant__r.Gender__c',
             'Participant__r.Email__c',
             'Participant__r.Phone__c',
