--- a/force-app/main/default/classes/AddPatientByPIRemote.cls
+++ b/force-app/main/default/classes/AddPatientByPIRemote.cls
@@ -14,6 +14,7 @@ public without sharing class AddPatientByPIRemote {
     public class RecordsData{
         @AuraEnabled public Participant__c participantRecord;
         @AuraEnabled public Participant_Enrollment__c peRecord;
+        @AuraEnabled public String participantState;
     }
     
     public class FormData {
@@ -108,6 +109,7 @@ public without sharing class AddPatientByPIRemote {
         ];
         RecordsData data = new RecordsData();
         data.participantRecord = participantRecord;
+        data.participantState = participantRecord.Mailing_State_Code__c;
         data.peRecord = per;
         return data;
     }
