R-415: Fixed State Information

--- a/force-app/main/default/classes/ParticipantDeduplicationController.cls
+++ b/force-app/main/default/classes/ParticipantDeduplicationController.cls
@@ -115,7 +115,8 @@ public without sharing class ParticipantDeduplicationController {
 			Last_Name__c                = referralRecord.lastName__c,
 			Email__c                    = referralRecord.email__c,
 			Phone__c                    = referralRecord.phone__c,
-			Mailing_State_Province__c   = referralRecord.Address_State__c,
+			Mailing_State__c            = referralRecord.Address_State__c,
+            Mailing_State_Code__c       = CountryStateUtil.getStateCode(referralRecord.Address_Country__c, referralRecord.Address_State__c),
 			Mailing_Street__c           = referralRecord.Address_AddressLine1__c,
 			Mailing_Zip_Postal_Code__c  = referralRecord.Address_ZipCode__c,
 			Mailing_Country_Code__c     = referralRecord.Address_Country__c,
