--- a/force-app/main/default/classes/DuplicateContactController.cls
+++ b/force-app/main/default/classes/DuplicateContactController.cls
@@ -16,6 +16,7 @@ public without sharing class  DuplicateContactController {
 			phone__c = participant.phone__c,
             birthYear__c = participant.Date_of_Birth__c != null && participant.Date_of_Birth__c != '' ?  participant.Date_of_Birth__c.substring(0,4) : '',
             Address_Country__c = participant.Mailing_Country_Code__c,
+            Address_State__c = CountryStateUtil.getStateName(participant.Mailing_Country_Code__c, participant.Mailing_State_Code__c),
             Data_Source__c = participantEnrollment.Referral_Source__c,
             sex__c = participant.Gender__c,
             Address_ZipCode__c = participant.Mailing_Zip_Postal_Code__c
